--- a/client/.env_sample
+++ b/client/.env_sample
@@ -1,4 +1,1 @@
-REACT_APP_KINDE_DOMAIN=https://your_subdomain.kinde.com
-REACT_APP_KINDE_REDIRECT_URL=http://localhost:3000/home
-REACT_APP_KINDE_LOGOUT_URL=http://localhost:3000
-
+REACT_APP_KINDE_DOMAIN=https://your_subdomain.kinde.com REACT_APP_KINDE_REDIRECT_URL=http://localhost:3000 REACT_APP_KINDE_LOGOUT_URL=http://localhost:3000
