--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@kinde-oss/kinde-node-express-api": "^0.0.5",
+    "@kinde-oss/kinde-node-express-api": "^0.0.6",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.7"
   }
 }
