--- a/client/.env_sample
+++ b/client/.env_sample
@@ -1,7 +1,1 @@
-REACT_APP_KINDE_DOMAIN=https://your_subdomain.kinde.com
-
-REACT_APP_KINDE_REDIRECT_URL=http://localhost:3000
-
-REACT_APP_KINDE_LOGOUT_URL=http://localhost:3000
-
-REACT_APP_API_BASE_URL=http://localhost:5000/v1
+REACT_APP_KINDE_CLIENT_ID=your_kinde_client_id REACT_APP_KINDE_DOMAIN=https://your_subdomain.kinde.com REACT_APP_KINDE_REDIRECT_URL=http://localhost:3000 REACT_APP_KINDE_LOGOUT_URL=http://localhost:3000 REACT_APP_API_BASE_URL=http://localhost:6161/v1
